--- a/source/css/ChuFeedItem.css
+++ b/source/css/ChuFeedItem.css
@@ -1,5 +1,5 @@
 .chufeeditem {
-	margin: 8px;
+	margin: 8px 8px 0 8px;
     border-radius: 3px;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 	overflow: hidden;
